Added buttons to main menu, included button text to strings file

--- a/MooSeum/app/src/main/res/layout/activity_main_menu.xml
+++ b/MooSeum/app/src/main/res/layout/activity_main_menu.xml
@@ -12,28 +12,27 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:weightSum="1">
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="New Button"
-            android:id="@+id/button"
-            android:layout_weight="0.3" />
+            android:text="@string/play_btn_txt"
+            android:id="@+id/play_button"
+            android:layout_weight="0.33" />
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="New Button"
-            android:id="@+id/button2"
-            android:layout_weight="0.3" />
+            android:text="@string/connect_btn_txt"
+            android:id="@+id/connect_button"
+            android:layout_weight="0.33" />
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="New Button"
-            android:id="@+id/button3"
-            android:layout_weight="0.3" />
+            android:text="@string/scan_btn_txt"
+            android:id="@+id/scan_button"
+            android:layout_weight="0.33" />
     </LinearLayout>
 </RelativeLayout>
