--- a/MooSeum/app/src/main/res/layout/activity_main_menu.xml
+++ b/MooSeum/app/src/main/res/layout/activity_main_menu.xml
@@ -14,10 +14,17 @@
         android:layout_alignParentLeft="true"
         android:weightSum="1">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/default_text"
+            android:id="@+id/textView"/>
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/play_btn_txt"
+            android:textSize="30sp"
             android:id="@+id/play_button"
             android:layout_weight="0.33" />
 
@@ -25,6 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/connect_btn_txt"
+            android:textSize="30sp"
             android:id="@+id/connect_button"
             android:layout_weight="0.33" />
 
@@ -32,7 +40,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/scan_btn_txt"
+            android:textSize="30sp"
             android:id="@+id/scan_button"
             android:layout_weight="0.33" />
     </LinearLayout>
+
+
+
 </RelativeLayout>
