--- a/QuizTagApp/app/src/main/res/menu/back_button_menu.xml
+++ b/QuizTagApp/app/src/main/res/menu/back_button_menu.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item android:id="@+id/toolbar_back_button"
-        android:title="Back"
+        android:title="@string/tool_bar_back_button_text"
         app:showAsAction="always"
         android:icon="@drawable/back_icon"
-
+        android:orderInCategory="100"
     />
+
 </menu>
