--- a/QuizTagApp/app/src/main/res/menu/main.xml
+++ b/QuizTagApp/app/src/main/res/menu/main.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".Main_Menu">
+
     <item android:id = "@+id/exit_menu_option"
         android:title="@string/exit"
         app:showAsAction="ifRoom|withText"
+        android:orderInCategory="100"
         android:icon="@drawable/exit"
         />
 </menu>
