--- a/QuizTagApp/app/src/main/res/layout/question_screen_activity.xml
+++ b/QuizTagApp/app/src/main/res/layout/question_screen_activity.xml
@@ -1,48 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:theme="@style/AppTheme"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".GameMenu">
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
+        <ImageButton
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_weight="0.33"
             android:text="@string/skips_text"
-            android:id="@+id/skips_img"
+            android:id="@+id/skips_count_img"
             android:src="@drawable/skip_icon"
-            android:padding="10dp"
+            android:scaleType="fitCenter"
             android:contentDescription="@string/skip_icon_description" />
-        <ImageView
+
+        <ImageButton
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_weight="0.33"
             android:text="@string/hints_text"
-            android:id="@+id/hints_img"
+            android:id="@+id/hints_count_img"
             android:src="@drawable/hint_icon"
-            android:padding="10dp"
+            android:scaleType="fitCenter"
             android:contentDescription="@string/hint_icon_description" />
-        <ImageView
+
+        <ImageButton
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_weight="0.33"
             android:text="@string/coins_text"
-            android:id="@+id/coins_img"
+            android:id="@+id/coins_count_img"
             android:src="@drawable/coins_icon"
-            android:padding="10dp"
+            android:scaleType="fitCenter"
             android:contentDescription="@string/coin_icon_description" />
     </LinearLayout>
 
@@ -76,29 +73,32 @@
             android:padding="10dp"/>
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        />
 
-    <Button
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/start_btn_txt"
-        android:textSize="30sp"
-        android:id="@+id/start_button"
-        android:layout_weight="0.33"/>
+        android:id="@+id/question_field"
+        android:textSize="15sp"
+        android:layout_weight="0.5"
+        android:layout_marginBottom="2dp"/>
 
-    <Button
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        />
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/quiz_tag_txt"
-        android:textSize="30sp"
-        android:id="@+id/quiz_tag_button"
-        android:layout_weight="0.33"/>
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/points_btn_txt"
-        android:textSize="30sp"
-        android:id="@+id/points_button"
-        android:layout_weight="0.33"/>
+        android:id="@+id/hints_field"
+        android:textSize="15sp"
+        android:layout_weight="0.5"
+        android:layout_marginTop="2dp" />
 
 </LinearLayout>
