Added intent for shop screen, not tested

--- a/QuizTagApp/app/src/main/res/layout/activity_main_menu.xml
+++ b/QuizTagApp/app/src/main/res/layout/activity_main_menu.xml
@@ -19,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/play_btn_txt"
+            android:background="@android:drawable/btn_default"
             android:textSize="30sp"
             android:id="@+id/play_button"
             android:layout_weight="0.33"
@@ -28,6 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/connect_btn_txt"
+            android:background="@android:drawable/btn_default"
             android:textSize="30sp"
             android:id="@+id/connect_button"
             android:layout_weight="0.33"
@@ -37,6 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/scan_btn_txt"
+            android:background="@android:drawable/btn_default"
             android:textSize="30sp"
             android:id="@+id/scan_button"
             android:layout_weight="0.33"
