--- a/QuizTagApp/app/src/main/res/layout/buy_hints_button.xml
+++ b/QuizTagApp/app/src/main/res/layout/buy_hints_button.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="@android:drawable/btn_default"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@android:drawable/btn_default"
     android:clickable="true">
 
     <ImageView
@@ -16,7 +16,7 @@
         android:maxWidth="50dp"
         android:scaleType="fitCenter"
         android:id="@+id/shop_skip_button_image"
-        android:src="@drawable/skip_icon" />
+        android:src="@drawable/hint_icon" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,7 +31,7 @@
             android:layout_gravity="center_vertical"
             android:textSize="30sp"
             android:gravity="center"
-            android:text="Buy Skips"
+            android:text="Buy Hints"
             android:textAllCaps="true"
             android:textColor="#000000"
             android:fontFamily="sans-serif-medium"/>
@@ -43,7 +43,7 @@
             android:layout_gravity="center_vertical"
             android:textSize="20sp"
             android:gravity="center"
-            android:text="(60 points)"
+            android:text="(30 points)"
             android:textAllCaps="true"
             android:textColor="#000000"
             android:fontFamily="sans-serif-medium"/>
