--- a/QuizTagApp/app/src/main/res/layout/question_screen_activity.xml
+++ b/QuizTagApp/app/src/main/res/layout/question_screen_activity.xml
@@ -102,6 +102,7 @@
         android:id="@+id/hint1"
         android:layout_weight="0.1"
         android:backgroundTint="@android:color/transparent"
+        android:background="@android:drawable/btn_default"
         android:visibility="invisible"
         />
 
@@ -111,6 +112,7 @@
         android:id="@+id/hint2"
         android:layout_weight="0.1"
         android:backgroundTint="@android:color/transparent"
+        android:background="@android:drawable/btn_default"
         android:visibility="invisible"
         />
 
@@ -120,6 +122,7 @@
         android:id="@+id/hint3"
         android:layout_weight="0.1"
         android:backgroundTint="@android:color/transparent"
+        android:background="@android:drawable/btn_default"
         android:visibility="invisible"
         />
 
@@ -129,6 +132,7 @@
         android:id="@+id/hint4"
         android:layout_weight="0.1"
         android:backgroundTint="@android:color/transparent"
+        android:background="@android:drawable/btn_default"
         android:visibility="invisible"
         />
 <!--
