--- a/QuizTagApp/app/src/main/res/layout/shop_menu_activity.xml
+++ b/QuizTagApp/app/src/main/res/layout/shop_menu_activity.xml
@@ -3,14 +3,14 @@
               xmlns:tools="http://schemas.android.com/tools"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               app:theme="@style/AppTheme"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:paddingLeft="@dimen/activity_horizontal_margin"
-              android:paddingRight="@dimen/activity_horizontal_margin"
-              android:paddingTop="@dimen/activity_vertical_margin"
-              android:paddingBottom="@dimen/activity_vertical_margin"
-              tools:context=".GameMenu">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".GameMenu">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -82,7 +82,7 @@
              android:layout_weight="0.5"
              />
 
-    <include layout="@layout/buy_skips_button"
+    <include layout="@layout/buy_hints_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
