--- a/QuizTagApp/app/src/main/res/layout/nfc_writer.xml
+++ b/QuizTagApp/app/src/main/res/layout/nfc_writer.xml
@@ -3,6 +3,13 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="NFC TAG INFO HERE"
+        android:textSize="25dp"
+        android:id="@+id/nfc_text_view"
+        />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
