--- a/QuizTagApp/app/src/main/res/layout/scan_screen_activity.xml
+++ b/QuizTagApp/app/src/main/res/layout/scan_screen_activity.xml
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/scan_screen_description_field"
-        android:textSize="15sp"
+        android:textSize="19sp"
         android:layout_weight="0.90"
         android:textColor="@android:color/black"
         android:scrollbars="vertical"/>
@@ -35,7 +35,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/scan_screen_url_field"
         android:layout_weight="0.05"
-        android:text="@string/scan_screen_url_text"/>
+        android:text="@string/scan_screen_url_text"
+        android:textSize="15sp"
+        android:textAlignment="center"/>
 
 
 
