--- a/QuizTagApp/app/src/main/res/layout-land/game_menu_activity.xml
+++ b/QuizTagApp/app/src/main/res/layout-land/game_menu_activity.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              app:theme="@style/AppTheme"
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -10,43 +7,60 @@
               android:paddingRight="@dimen/activity_horizontal_margin"
               android:paddingTop="@dimen/activity_vertical_margin"
               android:paddingBottom="@dimen/activity_vertical_margin"
-              tools:context=".GameMenu">
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="1"
-    android:layout_weight="0.8">
-    <include layout="@layout/shop_buy_button"
-             android:id="@+id/shop_buy_skips_btn"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:layout_weight="0.5"
-        />
-
-    <include layout="@layout/shop_buy_button"
-             android:id="@+id/shop_buy_hints_btn"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:layout_weight="0.5"
-        />
-</LinearLayout>
+              android:weightSum="1">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:weightSum="1"
         android:layout_weight="0.2">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/start_btn_txt"
+            android:background="@android:drawable/btn_default"
+            android:textSize="30sp"
+            android:id="@+id/start_button"
+            android:layout_weight="0.33"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/quiz_tag_txt"
+            android:background="@android:drawable/btn_default"
+            android:textSize="30sp"
+            android:id="@+id/quiz_tag_button"
+            android:layout_weight="0.33"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/points_btn_txt"
+            android:background="@android:drawable/btn_default"
+            android:textSize="30sp"
+            android:id="@+id/shop_button"
+            android:layout_weight="0.33"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_weight="0.8">
 
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:scaleType="fitCenter"
             android:layout_weight="0.33"
             android:layout_gravity="center"
             android:text="@string/skips_text"
             android:id="@+id/skips_img"
             android:src="@drawable/skip_icon"
-            android:padding="10dp"
+            android:padding="5dp"
             android:contentDescription="@string/skip_icon_description"
             />
         <TextView
@@ -56,7 +70,7 @@
             android:text="@string/skips_text"
             android:id="@+id/skips_count_text"
             android:gravity="center"
-            android:padding="10dp"/>
+            android:padding="5dp"/>
 
         <ImageView
             android:layout_width="60dp"
@@ -66,7 +80,7 @@
             android:text="@string/hints_text"
             android:id="@+id/hints_img"
             android:src="@drawable/hint_icon"
-            android:padding="10dp"
+            android:padding="5dp"
             android:contentDescription="@string/hint_icon_description" />
         <TextView
             android:layout_width="match_parent"
@@ -75,7 +89,7 @@
             android:text="@string/hints_text"
             android:id="@+id/hints_count_text"
             android:gravity="center"
-            android:padding="10dp"/>
+            android:padding="5dp"/>
 
         <ImageView
             android:layout_width="60dp"
@@ -85,7 +99,7 @@
             android:text="@string/coins_text"
             android:id="@+id/coins_img"
             android:src="@drawable/coins_icon"
-            android:padding="10dp"
+            android:padding="5dp"
             android:contentDescription="@string/coin_icon_description" />
         <TextView
             android:layout_width="match_parent"
@@ -94,7 +108,6 @@
             android:text="@string/coins_text"
             android:id="@+id/coins_count_text"
             android:gravity="center"
-            android:padding="10dp"/>
+            android:padding="5dp"/>
     </LinearLayout>
-
 </LinearLayout>
