--- a/QuizTagApp/app/src/main/res/layout-land/question_screen_activity.xml
+++ b/QuizTagApp/app/src/main/res/layout-land/question_screen_activity.xml
@@ -23,6 +23,8 @@
             android:id="@+id/question_field"
             android:textSize="20sp"
             android:layout_weight="0.4"
+            android:scrollbars="vertical"
+            android:freezesText="true"
             android:layout_marginBottom="2dp"/>
 
         <View
@@ -37,6 +39,8 @@
             android:layout_weight="0.1"
             android:backgroundTint="@android:color/transparent"
             android:visibility="invisible"
+            android:scrollbars="vertical"
+            android:freezesText="true"
             android:textSize="17sp"/>
 
         <TextView
@@ -46,6 +50,8 @@
             android:layout_weight="0.1"
             android:backgroundTint="@android:color/transparent"
             android:visibility="invisible"
+            android:scrollbars="vertical"
+            android:freezesText="true"
             android:textSize="17sp"/>
 
         <TextView
@@ -55,6 +61,8 @@
             android:layout_weight="0.1"
             android:backgroundTint="@android:color/transparent"
             android:visibility="invisible"
+            android:scrollbars="vertical"
+            android:freezesText="true"
             android:textSize="17sp"/>
 
         <TextView
@@ -64,6 +72,8 @@
             android:layout_weight="0.1"
             android:backgroundTint="@android:color/transparent"
             android:visibility="invisible"
+            android:scrollbars="vertical"
+            android:freezesText="true"
             android:textSize="17sp"/>
 
     </LinearLayout>
