--- a/QuizTagApp/app/src/main/res/layout/smart_case_activity.xml
+++ b/QuizTagApp/app/src/main/res/layout/smart_case_activity.xml
@@ -6,11 +6,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:weightSum="1">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <Button
@@ -18,6 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:text="@string/back"
+            android:textSize="25dp"
             android:id="@+id/smart_case_back_btn"/>
 
         <Button
@@ -25,6 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:text="@string/next"
+            android:textSize="25sp"
             android:id="@+id/smart_case_next_btn"/>
 
     </LinearLayout>
@@ -32,7 +35,16 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
+        android:id="@+id/smart_case_title_text"
+        android:textSize="20sp"
+        android:paddingTop="5dp"
+        android:layout_weight="0.8"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
         android:id="@+id/smart_case_text"
-        android:scrollbars="vertical"/>
+        android:scrollbars="vertical"
+        android:layout_weight="0.2"/>
 
 </LinearLayout>
