updated app to add a cheat button for the demo, pressing the coins during the game resets the skips and hints to 10 and points to 150. Added an easter egg hunt quiz to the Sample Quizzes

--- a/QuizTagApp/app/src/main/res/layout-land/question_screen_activity.xml
+++ b/QuizTagApp/app/src/main/res/layout-land/question_screen_activity.xml
@@ -133,7 +133,7 @@
             android:layout_weight="1"
             android:backgroundTint="@android:color/transparent"
             android:text="@string/coins_text"
-            android:id="@+id/coins_btn"
+            android:id="@+id/question_coins_btn"
             android:src="@drawable/coins_icon"
             android:scaleType="centerCrop"
             android:layout_gravity="center"
